--- a/test.html
+++ b/test.html
@@ -15,9 +15,7 @@
         </style>
     </head>
     <body class="demo-namespace">
-        <div id="main" style="height:300px" contenteditable="true">
-          123123 <span data-seismic-variable>variable</span> asdasdasd
-        </div>
+        <div id="main" style="height:300px" contenteditable="true">123123 <span data-seismic-variable>variable</span>asdasdasd<span data-seismic-variable>variable</span></div>
         <script>
 const DocumentPosition = {
     /**
@@ -64,6 +62,7 @@ const DocumentPosition = {
 
             const selection = document.getSelection();
             //  console.error('selection', selection);
+
             if (selection?.isCollapsed) return;
 
             // console.error('selectionchange',selection);
@@ -91,29 +90,56 @@ const DocumentPosition = {
                     selection.extend(end,1);
                 }
             }
-            // if (start) {
-            //     if (order === )
-            // }
-            console.error(start, end, selection.anchorNode.compareDocumentPosition(selection.focusNode))
-
-
-                // console.error('comparePoint', range.comparePoint(start || end, offset))
-
-            // if (start && range.startOffset !== 0) {
-            //     // range.setStart(start, 0);
-            //     selection?.setBaseAndExtent(start, 0, start, 0);
-            //     // selection?.setPosition(start, 0);
-            // }
-
-            // if (end && end.endOffset !== end.innerText.length) {
-
-            //     range.setEnd(end, end.innerText.length);
-            // }
         });
-            // setTimeout(() => {
-            //         // window.getSelection().modify('extend', 'forward', 'word');
-            //         window.getSelection().extend(document.querySelector('span[data-seismic-variable]'), 0);
-            // }, 5000)
+
+        function executeType(event) {
+            switch(event.key) {
+                case "Backspace":
+                case "Delete":
+                    return 'delete';
+                case "c":
+                    if (event.ctrlKey) {
+                        return "ignore";
+                    }
+                    return "insert";
+                default:
+                return event.key.length === 1 ? 'insert' : 'ignore';
+
+            }
+        }
+
+        document.getElementById('main').addEventListener('keydown', event => {
+            const type = executeType(event);
+
+            if (type === 'ignore') return;
+
+            if (type === 'insert') {
+
+                const selection = document.getSelection();
+        // console.error('event', event)
+        // const start = getVariable(range.startContainer as HTMLElement);
+                if (!selection.isCollapsed) return;
+      const end = getVariable(selection.focusNode);
+        if (end) {
+            debugger;
+            let text;
+            if (end.nextSibling && end.nextSibling.nodeName === '#text') {
+                text = end.nextSibling;
+                if (text.nodeValue[0] !== "\u200B")
+                    text.nodeValue ="\u200B" + text.nodeValue
+            } else {
+                text = end.parentElement.insertBefore(document.createTextNode("\u200B"), end.nextElementSibling)
+            }
+            // end.parentElement.insertBefore("\u200B", end.nextElementSibling)
+            // editor.select(text, 1);
+            selection.setPosition(text, 1);
+            // event.preventDefault();
+        }
+
+            }
+
+
+        })
         </script>
     </body>
 </html>
