--- a/test.html
+++ b/test.html
@@ -5,141 +5,133 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <style>
             span[data-seismic-variable] {
-                background:#ccc;
+                background: #ccc;
             }
-            div{
-
+            div {
                 overflow: scroll;
                 resize: both;
             }
         </style>
     </head>
     <body class="demo-namespace">
-        <div id="main" style="height:300px" contenteditable="true">123123 <span data-seismic-variable>variable</span>asdasdasd<span data-seismic-variable>variable</span></div>
+        <div id="main" style="height:300px" contenteditable="true">
+            123123 <span data-seismic-variable>variable</span>asdasdasd<span data-seismic-variable>variable</span>
+        </div>
         <script>
-const DocumentPosition = {
-    /**
-     * Same node
-     */
-    Same: 0,
+            const DocumentPosition = {
+                /**
+                 * Same node
+                 */
+                Same: 0,
 
-    /**
-     * Node is disconnected from document
-     */
-    Disconnected: 1,
+                /**
+                 * Node is disconnected from document
+                 */
+                Disconnected: 1,
 
-    /**
-     * Node is preceding the comparing node
-     */
-    Preceding: 2,
+                /**
+                 * Node is preceding the comparing node
+                 */
+                Preceding: 2,
 
-    /**
-     * Node is following the comparing node
-     */
-    Following: 4,
+                /**
+                 * Node is following the comparing node
+                 */
+                Following: 4,
 
-    /**
-     * Node contains the comparing node
-     */
-    Contains: 8,
+                /**
+                 * Node contains the comparing node
+                 */
+                Contains: 8,
 
-    /**
-     * Node is contained by the comparing node
-     */
-    ContainedBy: 16
-}
+                /**
+                 * Node is contained by the comparing node
+                 */
+                ContainedBy: 16
+            };
 
+            function getVariable(node) {
+                if (node === document.getElementById("main")) return;
+                if (node.hasAttribute && node.hasAttribute("data-seismic-variable")) return node;
 
-    function getVariable(node) {
-        if (node === document.getElementById('main')) return;
-        if (node.hasAttribute && node.hasAttribute('data-seismic-variable')) return node;
-
-        if (node.parentElement)
-            return getVariable(node.parentElement)
-    }
-
-        document.addEventListener('selectionchange', event => {
-
-            const selection = document.getSelection();
-            //  console.error('selection', selection);
-
-            if (selection?.isCollapsed) return;
-
-            // console.error('selectionchange',selection);
-            // const range = editor.getSelectionRange();
-            const start = getVariable(selection.anchorNode);
-            const end = getVariable(selection.focusNode);
-            if (!(start || end)) return;
-            const order = selection.anchorNode.compareDocumentPosition(selection.focusNode);
-            console.error('order', order);
-            if (start === end) {
-                // <---
-                console.error(selection.anchorOffset , selection.focusOffset);
-                if (selection.anchorOffset > selection.focusOffset) {
-                    selection.setBaseAndExtent(end, 1, start, 0)
-                } else {
-                // --->
-                    selection.setBaseAndExtent(start, 0, end, 1)
-                }
-            } else if (end) {
-                if (order === DocumentPosition.Preceding) {
-                    selection.extend(end,0)
-                }
-
-                if (order === DocumentPosition.Following) {
-                    selection.extend(end,1);
-                }
+                if (node.parentElement) return getVariable(node.parentElement);
             }
-        });
 
-        function executeType(event) {
-            switch(event.key) {
-                case "Backspace":
-                case "Delete":
-                    return 'delete';
-                case "c":
-                    if (event.ctrlKey) {
-                        return "ignore";
-                    }
-                    return "insert";
-                default:
-                return event.key.length === 1 ? 'insert' : 'ignore';
-
-            }
-        }
-
-        document.getElementById('main').addEventListener('keydown', event => {
-            const type = executeType(event);
-
-            if (type === 'ignore') return;
-
-            if (type === 'insert') {
-
+            document.addEventListener("selectionchange", event => {
                 const selection = document.getSelection();
-        // console.error('event', event)
-        // const start = getVariable(range.startContainer as HTMLElement);
+                //  console.error('selection', selection);
+
+                if (selection?.isCollapsed) return;
+
+                // console.error('selectionchange',selection);
+                // const range = editor.getSelectionRange();
+                const start = getVariable(selection.anchorNode);
+                const end = getVariable(selection.focusNode);
+                if (!(start || end)) return;
+                const order = selection.anchorNode.compareDocumentPosition(selection.focusNode);
+                console.error("order", order);
+                if (start === end) {
+                    // <---
+                    console.error(selection.anchorOffset, selection.focusOffset);
+                    if (selection.anchorOffset > selection.focusOffset) {
+                        selection.setBaseAndExtent(end, 1, start, 0);
+                    } else {
+                        // --->
+                        selection.setBaseAndExtent(start, 0, end, 1);
+                    }
+                } else if (end) {
+                    if (order === DocumentPosition.Preceding) {
+                        selection.extend(end, 0);
+                    }
+
+                    if (order === DocumentPosition.Following) {
+                        selection.extend(end, 1);
+                    }
+                }
+            });
+
+            function executeType(event) {
+                switch (event.key) {
+                    case "Backspace":
+                    case "Delete":
+                        return "delete";
+                    case "c":
+                        if (event.ctrlKey) {
+                            return "ignore";
+                        }
+                        return "insert";
+                    default:
+                        return event.key.length === 1 ? "insert" : "ignore";
+                }
+            }
+
+            document.getElementById("main").addEventListener("keydown", event => {
+                const type = executeType(event);
+
+                if (type === "ignore") return;
+                const selection = document.getSelection();
                 if (!selection.isCollapsed) return;
-      const end = getVariable(selection.focusNode);
-        if (end) {
-            debugger;
-            let text;
-            if (end.nextSibling && end.nextSibling.nodeName === '#text') {
-                text = end.nextSibling;
-                if (text.nodeValue[0] !== "\u200B")
-                    text.nodeValue ="\u200B" + text.nodeValue
-            } else {
-                text = end.parentElement.insertBefore(document.createTextNode("\u200B"), end.nextElementSibling)
-            }
-            // end.parentElement.insertBefore("\u200B", end.nextElementSibling)
-            // editor.select(text, 1);
-            selection.setPosition(text, 1);
-            // event.preventDefault();
-        }
+                const end = getVariable(selection.focusNode);
+                if (type === 'delete') {
+                   end.remove();
+                }
 
-            }
-
-
-        })
+                if (type === "insert") {
+                    if (end) {
+                        let text;
+                        if (end.nextSibling && end.nextSibling.nodeName === "#text") {
+                            text = end.nextSibling;
+                            if (text.nodeValue[0] !== "\u200B") text.nodeValue = "\u200B" + text.nodeValue;
+                        } else {
+                            text = end.parentElement.insertBefore(
+                                document.createTextNode("\u200B"),
+                                end.nextElementSibling
+                            );
+                        }
+                        selection.setPosition(text, 1);
+                    }
+                }
+            });
         </script>
     </body>
 </html>
